--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,8 @@ dependencies:
     sdk: flutter
   dio: ^5.4.0
   cupertino_icons: ^1.0.2
-  mockito: ^5.4.4
   flutter_riverpod: ^2.4.9
+  get_it: ^7.6.4
 
 dev_dependencies:
   flutter_test:
